<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.stockchart.ui.MainViewModel" />
        <import type="com.example.stockchart.utlis.CommonUtils"/>
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddInvestFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/activity_margin"
        android:paddingBottom="@dimen/extra_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/problemLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/problem_cancel_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/line_spacing"
                android:text="@string/generic_close"
                android:textAllCaps="true"
                android:textColor="@color/negative_color"
                app:iconTint="@color/negative_color_dark"
                app:layout_constraintEnd_toStartOf="@+id/problem_save_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/problem_save_btn"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/line_spacing"
                android:textColor="@color/dark_green_color"
                android:text="@string/generic_save"
                android:textAllCaps="true"
                app:backgroundTint="@color/cardview_light_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/problem_cancel_btn"
                app:layout_constraintTop_toTopOf="parent" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputamount"
                style="@style/Widget.App.TextInputLayout.Problem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_spacing"
                android:hint="@string/amount_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/problem_save_btn">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputAmount_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoCorrect|textCapSentences|textMultiLine"
                    android:imeOptions="actionNext"
                    android:text="@={viewModel.amount}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/InputDate"
                style="@style/Widget.App.TextInputLayout.Problem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_spacing"
                android:hint="@string/date_text"
                app:layout_constraintTop_toBottomOf="@+id/inputamount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputDate_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textAutoCorrect|textCapSentences|textMultiLine"
                    android:text="@{CommonUtils.INSTANCE.getReadableDate(viewModel.seletedDate)}" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/unit_dummy"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/InputDate"
                app:layout_constraintTop_toBottomOf="@+id/InputDate"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>