<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.view.View"/>
        <variable
            name="invest"
            type="com.example.stockchart.data.model.MyInvest"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="@dimen/element_spacing"
        android:layout_marginEnd="@dimen/element_spacing"
        app:cardBackgroundColor="@color/light_black_color"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectorGroup">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/nav_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-condensed-light"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/cardview_light_background"
                android:textSize="12sp"
                android:transitionName="@{invest.nav}"
                app:layout_constraintEnd_toEndOf="@+id/NAV_head"
                app:layout_constraintTop_toBottomOf="@+id/NAV_head"
                tools:text="₹1.78" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/invest_amount_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="@dimen/element_spacing"
                android:fontFamily="sans-serif-medium"
                android:text="@string/investment_head"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/invest_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@color/cardview_light_background"
                android:textSize="12sp"
                android:transitionName="@{invest.invest_price}"
                app:layout_constraintStart_toStartOf="@+id/invest_amount_head"
                app:layout_constraintTop_toBottomOf="@+id/invest_amount_head"
                tools:text="₹100.60" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/unit_amount_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/unit_head_text"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/unit_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@color/cardview_light_background"
                android:transitionName="@{invest.unit}"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/unit_amount_head"
                app:layout_constraintStart_toStartOf="@+id/unit_amount_head"
                app:layout_constraintTop_toBottomOf="@+id/invest_amount_head"
                tools:text="₹4.520" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/NAV_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/nav_text_head"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/element_spacing"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@color/cardview_shadow_start_color"
                android:backgroundTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/unit_count" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:transitionName="@{invest.invest_date}"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/invest_price"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                tools:text="10-12-2020" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/new_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/light_green_color"
                android:textSize="12sp"
                android:transitionName="@{invest.my_price}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/nav_price"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                tools:text="₹100.60" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/price_diff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/light_green_color"
                android:textSize="12sp"
                android:transitionName="@{invest.price_diff}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/unit_count"
                app:layout_constraintStart_toStartOf="@+id/unit_count"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                tools:text="₹100.60" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>